test/errors/type/int/tochar.yasl

echo mt.lookup(0, .tochar)(1.0)
