test/errors/type/int/tochar.yasl.err
TypeError: int.tochar expected arg in position 0 to be of type int, got arg of type float. (line 2)
